Fix error and improve readability of last answer panel

--- a/lavaze/http/static/css/app.css
+++ b/lavaze/http/static/css/app.css
@@ -127,6 +127,7 @@ body {
             }
         #last-answer .actual-value {
             display: inline-block;
+            color: #0a0;
             margin-left: 1.0em;
             margin-right: 1.0em;
             }
